updated my github repo link

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                   <br>
                 <p>Feel free to contact me for any inquiries or if you may wish to work with me or use my skills. </p>
                 <p>Trully, nobody knows it all thus I myself may wish to learn more about you. It will be my pleasure working with you. </p>
-                <p class="social"><a href="https://web.facebook.com/kelly.clinton.940" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/cleantoneclin" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://www.instagram.com/cleantone_c" title="" class="instagram"><i class="fa fa-instagram"></i></a><a href="https://mail.google.com/mail" title="" class="email"><i class="fa fa-envelope"></i></a></p>
+                <p class="social"><a href="https://web.facebook.com/kelly.clinton.940" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/cleantoneclin" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="https://www.instagram.com/cleantone_c" title="" class="instagram"><i class="fa fa-instagram"></i></a><a href="https://mail.google.com/mail" title="" class="email"><i class="fa fa-envelope"></i></a><a href="https://github.com/ClintonClin" title="" class="github"><i class="fa fa-github"></i></a></p>
               </div>
             </div>
           </div>
