--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/favicon.png">
-    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
@@ -43,7 +40,7 @@
           <div class="row">
             <div class="col-lg-6 col-md-8 col-sm-12 mx-auto">
               <p class="italic">Oh, {hello}; nice to meet you!</p>
-              <h1>I am Clinton Okerio and I am a web developer.</h1>
+              <h1>I am Clinton Okerio, a full stack developer.</h1>
             </div>
           </div>
         </div>
@@ -77,7 +74,7 @@
             <p class="lead">All about Clinton.</p>
             <p>I am an enthusiastic biker. Besides loving bikes, I really enjoy web development for it helps me sharpen my coding skills and be able to become a world class developer.</p>
             <p>Besides loving web application development and design,I enjoy gaming as well. Creativity is a major factor in web design and thus needed to think out of the box.
-              I started my software development career when I immediately finished high school. I wanted to persue game development and design or android development but due to unavoidable circumnstances 
+              I started my software development career when I immediately finished high school. I wanted to persue game development and design or android development but one thing led to another and
               I opted for full-stack development.
             </p><p>I enjoy what I do now and I am ready to learn everything that I've always wished to do.</p>
             <!-- <p>Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery. </p> -->
