--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="row">
             <div class="col-lg-6 col-md-8 col-sm-12 mx-auto">
               <p class="italic">Oh, {hello}; nice to meet you!</p>
-              <h1>I am Clinton Okerio and I am a web developer.</h1>
+              <h1>I am Clinton Okerio, a web developer.</h1>
             </div>
           </div>
         </div>
